--- a/scenarioNodes/say.html
+++ b/scenarioNodes/say.html
@@ -7,30 +7,30 @@
 <script type="text/javascript">
 	RED.nodes.registerType('say', {
 		category: 'Project Alice',
-		color: '#3FADB5',
+		color:    '#3FADB5',
 		defaults: {
-			name: {
-				value: '',
+			name:   {
+				value: ''
 			},
 			broker: {
-				type: 'aliceMqtt',
+				type:     'aliceMqtt',
 				required: true
 			},
-			say: {
-				value: '',
+			say:    {
+				value:    '',
 				required: false
 			},
 			client: {
 				value: ''
 			}
 		},
-		inputs: 1,
-		outputs: 0,
-		icon: 'font-awesome/fa-comment',
-		label: function () {
-			if(!this.name && !this.say)
+		inputs:   1,
+		outputs:  0,
+		icon:     'font-awesome/fa-comment',
+		label:    function () {
+			if (!this.name && !this.say)
 				return 'AliceSay'
-			return this.name || "\""+this.say+"\""
+			return this.name || '"' + this.say + '"'
 		}
 	})
 </script>
@@ -65,9 +65,9 @@
 
 <script type="text/html" data-template-name="say">
 	<div class="form-row">
-        <label for="node-input-name"><i class="fa fa-tag"></i> Name</label>
-        <input type="text" id="node-input-name" placeholder="Name">
-    </div>
+		<label for="node-input-name"><i class="fa fa-tag"></i> Name</label>
+		<input type="text" id="node-input-name" placeholder="Name">
+	</div>
 	<div class="form-row">
 		<label for="node-input-broker"><i class="fa fa-bookmark fa-fw"></i> <span
 				data-i18n="say.broker"></span>Broker</label>
